methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^MethodsArgs:2: error: not found: value move
move(nbPas:Int, bForward:Boolean) {
^MethodsArgs:2: error: not found: value nbPas
move(nbPas:Int, bForward:Boolean) {
     ^MethodsArgs:2: error: not found: value bForward
move(nbPas:Int, bForward:Boolean) {
                ^MethodsArgs:3: error: not found: value bForward
  if(bForward) {
     ^MethodsArgs:4: error: not found: value nbPas
    for(i <- 1 to nbPas) {
                  ^MethodsArgs:8: error: not found: value nbPas
    for(i <- 1 to nbPas) {
                  ^